# Kiosco

Kiosco/kiosco/: pyproject.toml
Kiosco/kiosco/kiosco/: Template.py  UI_Kiosco.ui  main.py  main2.py  ui_functions.py  ventas.py
Kiosco/kiosco/kiosco/Nueva carpeta/: UI_Kiosco.py  UI_Kiosco.ui  dbk.db  main2.py
